// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CallControls Component > Snapshot Testing > should match snapshot when in focus mode 1`] = `
<DocumentFragment>
  <div
    class="z-10 absolute bottom-10 w-full flex flex-col items-center gap-4 pt-[100px]"
  >
    <div
      class="relative"
    >
      <div
        data-testid="button-group"
      >
        <button
          data-active="false"
          data-disabled="false"
          data-show="true"
          data-testid="button-0"
        >
          <div
            data-testid="pause-icon"
          >
            Pause Icon
          </div>
          <span
            data-testid="button-text-0"
          >
            Pause Transcription
          </span>
        </button>
        <button
          data-active="true"
          data-disabled="false"
          data-show="true"
          data-testid="button-1"
        >
          <div
            class=""
            data-testid="focus-icon"
          >
            Focus Icon
          </div>
          <span
            data-testid="button-text-1"
          >
            Focused
          </span>
        </button>
        <button
          data-active="false"
          data-disabled="false"
          data-show="true"
          data-testid="button-2"
        >
          <div
            data-testid="stop-icon"
          >
            Stop Icon
          </div>
          <span
            data-testid="button-text-2"
          >
            End session
          </span>
        </button>
      </div>
    </div>
    <div
      class="flex items-center gap-2"
    >
      <div
        class="[&_path]:fill-[#B6B5B9]"
        data-testid="warning-icon"
      >
        Warning Icon
      </div>
      <span
        class="text-xs text-[#fff] font-medium"
      >
        Your data is safe
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CallControls Component > Snapshot Testing > should match snapshot when paused 1`] = `
<DocumentFragment>
  <div
    class="z-10 absolute bottom-10 w-full flex flex-col items-center gap-4 pt-[100px]"
  >
    <div
      class="relative"
    >
      <div
        data-testid="button-group"
      >
        <button
          data-active="true"
          data-disabled="false"
          data-show="true"
          data-testid="button-0"
        >
          <div
            data-testid="resume-icon"
          >
            Resume Icon
          </div>
          <span
            data-testid="button-text-0"
          >
            Resume Transcription
          </span>
        </button>
        <button
          data-active="false"
          data-disabled="false"
          data-show="true"
          data-testid="button-1"
        >
          <div
            class="[&_path]:fill-[#FFFFFF]"
            data-testid="focus-icon"
          >
            Focus Icon
          </div>
          <span
            data-testid="button-text-1"
          >
            Focus
          </span>
        </button>
        <button
          data-active="false"
          data-disabled="false"
          data-show="true"
          data-testid="button-2"
        >
          <div
            data-testid="stop-icon"
          >
            Stop Icon
          </div>
          <span
            data-testid="button-text-2"
          >
            End session
          </span>
        </button>
      </div>
      <div
        class="flex gap-2 items-center text-xs text-[#1D1B20] bg-[#FFFFFF] absolute top-[-64px] left-8 max-w-[300px] rounded-[4px] p-2"
      >
        Need notes captured? AI can’t hear you right now. Resume to let it listen.
        <div
          class="w-4 h-4 cursor-pointer"
          data-testid="x-icon"
        >
          X Icon
        </div>
        <span
          class="w-0 h-0 border-l-[8px] border-r-[8px] border-t-[8px] border-l-transparent border-r-transparent border-t-[#FFFFFF] absolute bottom-[-8px] sm:left-[10%] md:left-[20%] lg:left-[30%]"
        />
      </div>
    </div>
    <div
      class="flex items-center gap-2"
    >
      <div
        class="[&_path]:fill-[#B6B5B9]"
        data-testid="warning-icon"
      >
        Warning Icon
      </div>
      <span
        class="text-xs text-[#fff] font-medium"
      >
        Your data is safe
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CallControls Component > Snapshot Testing > should match snapshot with all buttons disabled 1`] = `
<DocumentFragment>
  <div
    class="z-10 absolute bottom-10 w-full flex flex-col items-center gap-4 pt-[100px]"
  >
    <div
      class="relative"
    >
      <div
        data-testid="button-group"
      >
        <button
          data-active="false"
          data-disabled="true"
          data-show="true"
          data-testid="button-0"
          disabled=""
        >
          <div
            data-testid="pause-icon"
          >
            Pause Icon
          </div>
          <span
            data-testid="button-text-0"
          >
            Pause Transcription
          </span>
        </button>
        <button
          data-active="false"
          data-disabled="true"
          data-show="true"
          data-testid="button-1"
          disabled=""
        >
          <div
            class="[&_path]:fill-[#FFFFFF]"
            data-testid="focus-icon"
          >
            Focus Icon
          </div>
          <span
            data-testid="button-text-1"
          >
            Focus
          </span>
        </button>
        <button
          data-active="false"
          data-disabled="true"
          data-show="true"
          data-testid="button-2"
          disabled=""
        >
          <div
            data-testid="stop-icon"
          >
            Stop Icon
          </div>
          <span
            data-testid="button-text-2"
          >
            End session
          </span>
        </button>
      </div>
    </div>
    <div
      class="flex items-center gap-2"
    >
      <div
        class="[&_path]:fill-[#B6B5B9]"
        data-testid="warning-icon"
      >
        Warning Icon
      </div>
      <span
        class="text-xs text-[#fff] font-medium"
      >
        Your data is safe
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CallControls Component > Snapshot Testing > should match snapshot with default props 1`] = `
<DocumentFragment>
  <div
    class="z-10 absolute bottom-10 w-full flex flex-col items-center gap-4 pt-[100px]"
  >
    <div
      class="relative"
    >
      <div
        data-testid="button-group"
      >
        <button
          data-active="false"
          data-disabled="false"
          data-show="true"
          data-testid="button-0"
        >
          <div
            data-testid="pause-icon"
          >
            Pause Icon
          </div>
          <span
            data-testid="button-text-0"
          >
            Pause Transcription
          </span>
        </button>
        <button
          data-active="false"
          data-disabled="false"
          data-show="true"
          data-testid="button-1"
        >
          <div
            class="[&_path]:fill-[#FFFFFF]"
            data-testid="focus-icon"
          >
            Focus Icon
          </div>
          <span
            data-testid="button-text-1"
          >
            Focus
          </span>
        </button>
        <button
          data-active="false"
          data-disabled="false"
          data-show="true"
          data-testid="button-2"
        >
          <div
            data-testid="stop-icon"
          >
            Stop Icon
          </div>
          <span
            data-testid="button-text-2"
          >
            End session
          </span>
        </button>
      </div>
    </div>
    <div
      class="flex items-center gap-2"
    >
      <div
        class="[&_path]:fill-[#B6B5B9]"
        data-testid="warning-icon"
      >
        Warning Icon
      </div>
      <span
        class="text-xs text-[#fff] font-medium"
      >
        Your data is safe
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CallControls Component > Snapshot Testing > should match snapshot with tooltip visible 1`] = `
<DocumentFragment>
  <div
    class="z-10 absolute bottom-10 w-full flex flex-col items-center gap-4 pt-[100px]"
  >
    <div
      class="relative"
    >
      <div
        data-testid="button-group"
      >
        <button
          data-active="true"
          data-disabled="false"
          data-show="true"
          data-testid="button-0"
        >
          <div
            data-testid="resume-icon"
          >
            Resume Icon
          </div>
          <span
            data-testid="button-text-0"
          >
            Resume Transcription
          </span>
        </button>
        <button
          data-active="false"
          data-disabled="false"
          data-show="true"
          data-testid="button-1"
        >
          <div
            class="[&_path]:fill-[#FFFFFF]"
            data-testid="focus-icon"
          >
            Focus Icon
          </div>
          <span
            data-testid="button-text-1"
          >
            Focus
          </span>
        </button>
        <button
          data-active="false"
          data-disabled="false"
          data-show="true"
          data-testid="button-2"
        >
          <div
            data-testid="stop-icon"
          >
            Stop Icon
          </div>
          <span
            data-testid="button-text-2"
          >
            End session
          </span>
        </button>
      </div>
      <div
        class="flex gap-2 items-center text-xs text-[#1D1B20] bg-[#FFFFFF] absolute top-[-64px] left-8 max-w-[300px] rounded-[4px] p-2"
      >
        Need notes captured? AI can’t hear you right now. Resume to let it listen.
        <div
          class="w-4 h-4 cursor-pointer"
          data-testid="x-icon"
        >
          X Icon
        </div>
        <span
          class="w-0 h-0 border-l-[8px] border-r-[8px] border-t-[8px] border-l-transparent border-r-transparent border-t-[#FFFFFF] absolute bottom-[-8px] sm:left-[10%] md:left-[20%] lg:left-[30%]"
        />
      </div>
    </div>
    <div
      class="flex items-center gap-2"
    >
      <div
        class="[&_path]:fill-[#B6B5B9]"
        data-testid="warning-icon"
      >
        Warning Icon
      </div>
      <span
        class="text-xs text-[#fff] font-medium"
      >
        Your data is safe
      </span>
    </div>
  </div>
</DocumentFragment>
`;
